--- a/guice/grpc-sink/pom.xml
+++ b/guice/grpc-sink/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.google.cloud.trace</groupId>
+    <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>guice</artifactId>
     <version>0.3.3-SNAPSHOT</version>
   </parent>
@@ -18,7 +18,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.cloud.trace.v1</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
       <artifactId>grpc-consumer</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -33,7 +33,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.cloud.trace.v1</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
       <artifactId>sink</artifactId>
       <version>${project.version}</version>
     </dependency>
