--- a/samples/buffering-grpc/pom.xml
+++ b/samples/buffering-grpc/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.google.cloud.trace</groupId>
+    <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>samples</artifactId>
     <version>0.3.3-SNAPSHOT</version>
   </parent>
@@ -22,7 +22,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.cloud.trace.v1</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
       <artifactId>grpc-consumer</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -37,7 +37,7 @@
       <version>${project.version}</version>
     </dependency>
     <dependency>
-      <groupId>com.google.cloud.trace.v1</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
       <artifactId>sink</artifactId>
       <version>${project.version}</version>
     </dependency>
