--- a/samples/guice-servlet-grpc/pom.xml
+++ b/samples/guice-servlet-grpc/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.google.cloud.trace</groupId>
+    <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>samples</artifactId>
     <version>0.3.3-SNAPSHOT</version>
   </parent>
