--- a/sinks/v1/sink/pom.xml
+++ b/sinks/v1/sink/pom.xml
@@ -2,7 +2,7 @@
   <modelVersion>4.0.0</modelVersion>
 
   <parent>
-    <groupId>com.google.cloud.trace.v1</groupId>
+    <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
     <artifactId>v1</artifactId>
     <version>0.3.3-SNAPSHOT</version>
   </parent>
@@ -18,7 +18,7 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.google.cloud.trace</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
       <artifactId>core</artifactId>
       <version>${project.version}</version>
     </dependency>
@@ -55,7 +55,7 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>com.google.cloud.trace</groupId>
+      <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
       <artifactId>sink</artifactId>
       <version>${project.version}</version>
     </dependency>
