--- a/samples/guice-scheduled-grpc/pom.xml
+++ b/samples/guice-scheduled-grpc/pom.xml
@@ -65,7 +65,7 @@
     </dependency>
     <dependency>
       <groupId>com.github.japgolly.fork.google-cloud-trace.v1</groupId>
-      <artifactId>sink</artifactId>
+      <artifactId>api-sink</artifactId>
       <version>${project.version}</version>
     </dependency>
 
