--- a/pom.xml
+++ b/pom.xml
@@ -46,8 +46,8 @@
 
   <scm>
     <url>https://github.com/japgolly/cloud-trace-java</url>
-    <connection>scm:git:https://github.com/japgolly/cloud-trace-java.git</connection>
-    <developerConnection>scm:git:https://github.com/japgolly/cloud-trace-java.git</developerConnection>
+    <connection>scm:git:git@github.com:japgolly/cloud-trace-java.git</connection>
+    <developerConnection>scm:git:git@github.com:japgolly/cloud-trace-java.git</developerConnection>
     <tag>HEAD</tag>
   </scm>
 
