--- a/guice/java-timestamp/pom.xml
+++ b/guice/java-timestamp/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>guice</artifactId>
-    <version>0.3.3-SNAPSHOT</version>
+    <version>0.3.3</version>
   </parent>
   <artifactId>guice-java-timestamp</artifactId>
   <packaging>jar</packaging>
