--- a/services/logging-service/pom.xml
+++ b/services/logging-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>services-parent</artifactId>
-    <version>0.3.3-SNAPSHOT</version>
+    <version>0.3.3</version>
   </parent>
   <artifactId>logging-service</artifactId>
   <packaging>jar</packaging>
