--- a/sinks/v1/pom.xml
+++ b/sinks/v1/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <artifactId>root</artifactId>
     <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
-    <version>0.3.3-SNAPSHOT</version>
+    <version>0.3.3</version>
     <relativePath>../../pom.xml</relativePath>
   </parent>
 
