--- a/services/appengine-standard-service/pom.xml
+++ b/services/appengine-standard-service/pom.xml
@@ -4,7 +4,7 @@
   <parent>
     <groupId>com.github.japgolly.fork.google-cloud-trace</groupId>
     <artifactId>services-parent</artifactId>
-    <version>0.3.3</version>
+    <version>0.3.4-SNAPSHOT</version>
   </parent>
   <artifactId>appengine-standard-service</artifactId>
   <packaging>jar</packaging>
@@ -23,7 +23,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>core</artifactId>
-      <version>0.3.3</version>
+      <version>0.3.4-SNAPSHOT</version>
       <type>jar</type>
     </dependency>
     <dependency>
